--- a/HappyRapidCart/HappyRapidCart/Base.lproj/Main.storyboard
+++ b/HappyRapidCart/HappyRapidCart/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -105,29 +105,130 @@
             </objects>
             <point key="canvasLocation" x="285.50724637681162" y="138.61607142857142"/>
         </scene>
-        <!--Store List View Controller-->
+        <!--Pick a store !-->
         <scene sceneID="HLf-Sd-8oc">
             <objects>
-                <viewController id="Gus-ik-UMc" customClass="StoreListViewController" customModule="HappyRapidCart" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Gus-ik-UMc" customClass="StroesViewController" customModule="HappyRapidCart" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wLM-rp-03Z">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f3Q-Hn-o8T">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="StoreCell" rowHeight="175" id="PrY-bf-KqS" customClass="StoreCell" customModule="HappyRapidCart" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="175"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PrY-bf-KqS" id="B7h-j3-4if">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="175"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XXm-Dc-tqn">
+                                                    <rect key="frame" x="10" y="26" width="394" height="148"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vOv-cu-UOl">
+                                                            <rect key="frame" x="20" y="10" width="80" height="128"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="80" id="HMw-Fu-hyl"/>
+                                                                <constraint firstAttribute="width" constant="80" id="cre-PO-2eC"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZtJ-GX-ZHb">
+                                                            <rect key="frame" x="108" y="8" width="278" height="132"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="vOv-cu-UOl" firstAttribute="top" secondItem="XXm-Dc-tqn" secondAttribute="top" constant="10" id="9On-1N-YZJ"/>
+                                                        <constraint firstAttribute="bottom" secondItem="ZtJ-GX-ZHb" secondAttribute="bottom" constant="8" id="Hgy-ed-s2G"/>
+                                                        <constraint firstItem="ZtJ-GX-ZHb" firstAttribute="leading" secondItem="vOv-cu-UOl" secondAttribute="trailing" constant="8" id="OTC-Ez-BcN"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ZtJ-GX-ZHb" secondAttribute="trailing" constant="8" id="RIB-2I-CCp"/>
+                                                        <constraint firstAttribute="bottom" secondItem="vOv-cu-UOl" secondAttribute="bottom" constant="10" id="TLu-Il-aMy"/>
+                                                        <constraint firstItem="vOv-cu-UOl" firstAttribute="centerY" secondItem="XXm-Dc-tqn" secondAttribute="centerY" id="VYv-M2-x0G"/>
+                                                        <constraint firstItem="vOv-cu-UOl" firstAttribute="leading" secondItem="XXm-Dc-tqn" secondAttribute="leading" constant="20" id="hnH-qC-l4d"/>
+                                                        <constraint firstItem="ZtJ-GX-ZHb" firstAttribute="top" secondItem="XXm-Dc-tqn" secondAttribute="top" constant="8" id="m4g-xg-bnt"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="XXm-Dc-tqn" secondAttribute="bottom" constant="1" id="JuN-Ux-gJF"/>
+                                                <constraint firstItem="XXm-Dc-tqn" firstAttribute="leading" secondItem="B7h-j3-4if" secondAttribute="leading" constant="10" id="P3N-i2-MBS"/>
+                                                <constraint firstAttribute="trailing" secondItem="XXm-Dc-tqn" secondAttribute="trailing" constant="10" id="kbf-B3-Gbd"/>
+                                                <constraint firstItem="XXm-Dc-tqn" firstAttribute="top" secondItem="B7h-j3-4if" secondAttribute="top" constant="26" id="lda-xT-eiL"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="storeImage" destination="vOv-cu-UOl" id="u7G-wO-MLn"/>
+                                            <outlet property="storeLabel" destination="ZtJ-GX-ZHb" id="APc-BQ-XeK"/>
+                                            <outlet property="storeView" destination="XXm-Dc-tqn" id="vTi-vW-BRk"/>
+                                            <segue destination="T3H-pw-SCP" kind="show" id="8dH-I1-fdo"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="9iv-Xj-8DD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="ic4-5E-baf"/>
+                    <navigationItem key="navigationItem" title="Pick a store !" id="ic4-5E-baf"/>
+                    <connections>
+                        <outlet property="tableView" destination="f3Q-Hn-o8T" id="MM0-E8-dBk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4e9-sK-l5F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1926.0869565217392" y="138.61607142857142"/>
+            <point key="canvasLocation" x="1737.68115942029" y="138.61607142857142"/>
+        </scene>
+        <!--Fill your Cart!-->
+        <scene sceneID="bSe-D2-vRO">
+            <objects>
+                <viewController id="T3H-pw-SCP" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="d31-d0-Hj2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="glh-dG-FYB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Fill your Cart!" id="pAI-IM-qKA">
+                        <barButtonItem key="rightBarButtonItem" title="Cart" id="5dA-lQ-ttS">
+                            <connections>
+                                <segue destination="EdN-KD-1iK" kind="show" id="AnV-7D-mJv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S1l-3m-foc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2461" y="139"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ENd-Fq-fRy">
+            <objects>
+                <viewController id="EdN-KD-1iK" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ybd-6p-Kza">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="7Gg-tz-lj6"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="2Jo-GW-Ple"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R7a-K4-c32" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3226" y="139"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tw9-Lf-fQ5">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="azv-tc-FVn" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="azv-tc-FVn" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dcg-A9-Obg">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
